Додано Loader and error

--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,16 @@
     <link rel="stylesheet" href="./sass/index.scss" />
   </head>
   <body>
-    <select class="breed-select"> </select>
+    <select class="breed-select is-hidden"> </select>
     <p class="loader">Loading data, please wait...</p>
-    <p class="error">Oops! Something went wrong! Try reloading the page!</p>
+    <p class="error is-hidden">
+      Oops! Something went wrong! Try reloading the page!
+    </p>
     <div class="cat-info">
-      <img>
-      <p></p><p></p><p></p>
-
+      <img />
+      <p></p>
+      <p></p>
+      <p></p>
     </div>
 
     <script src="index.js" type="module"></script>
