--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 10</title>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/slim-select@latest/dist/slimselect.css"
+    />
     <link rel="stylesheet" href="./sass/index.scss" />
   </head>
   <body>
@@ -12,12 +16,7 @@
     <p class="error is-hidden">
       Oops! Something went wrong! Try reloading the page!
     </p>
-    <div class="cat-info">
-      <img />
-      <p></p>
-      <p></p>
-      <p></p>
-    </div>
+    <div class="cat-info"></div>
 
     <script src="index.js" type="module"></script>
   </body>
